add html template basic css and js

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>Lease Labs Challenge</title>
+  <meta name="description" content="Web Developer Code Challenge">
+  <meta name="author" content="Ron Lipps">
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <main id="main">
+    <header id="header">
+      <div id="branding"><img src="img/leaselabs_logo_fullstack_rgb.png" /></div>
+      <div id="navButton"><span></span><span></span><span></span></div>
+      <nav id="nav">
+        <ul>
+          <li>
+            <a href="javascript:;">HOME</a>
+          </li>
+          <li>
+            <a href="javascript:;">OUR WORK</a>
+          </li>
+          <li>
+            <a href="javascript:;">ABOUT US</a>
+          </li>
+          <li>
+            <a href="javascript:;">CONTACT US</a>
+          </li>
+          <li>
+            <a href="javascript:;">SPECIALS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="pull-right">
+      <article>
+        <h1>HEADING 1</h1>
+        <h2>heading 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus interdum rhoncus. Curabitur dictum est sit amet turpis auctor facilisis. Phasellus nec suscipit mi. In eget egestas risus. Aliquam erat volutpat. Duis euismod scelerisque orci, nec imperdiet lacus laoreet ac. Integer auctor massa tristique neque tincidunt blandit vel in augue.</p>
+        <p>Morbi vel diam vel arcu tincidunt rhoncus eget id mi. Vivamus sit amet semper nunc. Sed eget massa nec nulla lobortis vulputate sed id felis. Aenean finibus mattis lorem, eget laoreet orci ornare quis. Praesent ac mattis purus, ut porttitor tortor. Cras et condimentum velit.</p>
+        <p>Donec viverra sem eu sapien feugiat accumsan. Vivamus ullamcorper augue tempor sem dapibus pulvinar. Pellentesque ac nunc euismod, lobortis eros vitae, bibendum ex. Aliquam vitae justo turpis. Praesent ex orci, ullamcorper et eros in, euismod gravida tellus. Nullam sed sapien dictum, eleifend mauris et, placerat odio. Aliquam quis sapien nisl.</p>
+        <div id="gallery"></div>
+      </article>
+    </section>
+    <aside class="sidebar">
+      <div class="subnav">
+        <h3>SUBNAV</h3>
+        <ul>
+          <li>Link 1</li>
+          <li>Link 2</li>
+          <li>Link 3</li>
+        </ul>
+      </div>
+      <div class="related">
+          <h3>RELATED LINKS</h3>
+          <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+          </ul>
+      </div>
+    </aside>
+  </main>
 </body>
 </html>
