--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <main id="main">
     <header id="header">
       <div class="container">
-        <div id="branding"><img src="public/img/leaselabs_logo_fullstack_rgb.png" /></div>
+        <div id="branding"><img alt="Lease Labs Full Stack Marketing - Logo" src="public/img/leaselabs_logo_fullstack_rgb.png" /></div>
         <div id="navButton"><span></span><span></span><span></span></div>
         <nav id="nav">
           <ul>
