added carousel for 3 image cols

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus interdum rhoncus. Curabitur dictum est sit amet turpis auctor facilisis. Phasellus nec suscipit mi. In eget egestas risus. Aliquam erat volutpat. Duis euismod scelerisque orci, nec imperdiet lacus laoreet ac. Integer auctor massa tristique neque tincidunt blandit vel in augue.</p>
         <p>Morbi vel diam vel arcu tincidunt rhoncus eget id mi. Vivamus sit amet semper nunc. Sed eget massa nec nulla lobortis vulputate sed id felis. Aenean finibus mattis lorem, eget laoreet orci ornare quis. Praesent ac mattis purus, ut porttitor tortor. Cras et condimentum velit.</p>
         <p>Donec viverra sem eu sapien feugiat accumsan. Vivamus ullamcorper augue tempor sem dapibus pulvinar. Pellentesque ac nunc euismod, lobortis eros vitae, bibendum ex. Aliquam vitae justo turpis. Praesent ex orci, ullamcorper et eros in, euismod gravida tellus. Nullam sed sapien dictum, eleifend mauris et, placerat odio. Aliquam quis sapien nisl.</p>
-        <div id="gallery"></div>
+        <div class="galleryWrap">  
+          <div class="arrow arrow-left"></div>
+          <div class="arrow arrow-right"></div>
+          <div id="gallery"></div>
+        </div>
       </article>
     </section>
     <aside class="sidebar pull-left">
